Ryan_Debug install locations updated.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,17 +16,23 @@ include(addBaseProject)
 include(addBoostUniform)
 include(adddocs)
 include(addapp)
-INCLUDE(addlib)
+include(addlib)
+include(addInstallDirs)
 include(generaterc)
 include(GetGitRevisionDescription)
 include(adddocs)
 get_git_head_revision(GITREFSPECVAR GITHASHVAR)
 set(MAJOR 0)
-set(MINOR 5)
+set(MINOR 9)
 set(REVISION 1)
 set(RTMATH_VERSION ${MAJOR}.${MINOR}.${REVISION})
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 addBaseProject()
+addInstallDirs(rtmath ${RTMATH_VERSION})
+#message("${ABS_INSTALL_LIB_DIR}/lib${configappend}")
+#message("${INSTALL_CMAKE_DIR}/${REL_LIB_DIR}/lib${configappend}")
+SET(CMAKE_INSTALL_RPATH "${ABS_INSTALL_LIB_DIR}/lib${configappend}")
+
 
 configure_file (
     "${CMAKE_CURRENT_SOURCE_DIR}/rtmath/rtmath/rtmath/cmake-settings.h.in"
