--- a/ryan-debug/CMakeLists.txt
+++ b/ryan-debug/CMakeLists.txt
@@ -76,3 +76,110 @@ add_subdirectory(plugins)
 add_subdirectory(apps)
 
 
+
+
+export(TARGETS Ryan_Debug
+	FILE "${PROJECT_BINARY_DIR}/Ryan_DebugTargets.cmake")
+export(PACKAGE Ryan_Debug)
+
+ 
+configure_file (
+	"${CMAKE_CURRENT_SOURCE_DIR}/environment/ryan-debug"
+	"${PROJECT_BINARY_DIR}/module-ryan-debug"
+	)
+
+
+#file(RELATIVE_PATH REL_INCLUDE_DIR "${ABS_INSTALL_CMAKE_DIR}"
+#	"${INSTALL_INCLUDE_DIR}")
+
+# ... for the build tree
+set(CONF_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}" "${PROJECT_BINARY_DIR}")
+configure_file(Ryan-DebugConfig.cmake.in
+	"${PROJECT_BINARY_DIR}/Ryan_DebugConfig.cmake" @ONLY)
+# ... and for the install tree
+set(CONF_INCLUDE_DIRS "\${RYAN_DEBUG_CMAKE_DIR}/${REL_INCLUDE_DIR}") # Before WiX
+#set(CONF_INCLUDE_DIRS "")
+
+#message("${CONF_INCLUDE_DIRS}")
+
+configure_file(Ryan-DebugConfig.cmake.in
+	"${PROJECT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/Ryan_DebugConfig.cmake" @ONLY)
+# ... for both
+configure_file(Ryan-DebugConfigVersion.cmake.in
+	"${PROJECT_BINARY_DIR}/Ryan_DebugConfigVersion.cmake" @ONLY)
+
+#message("${INSTALL_CMAKE_DIR}/${REL_ASSEMBLY_DIR}")
+
+#foreach(p Debug RelWithDebInfo MinSizeRel Release)
+	if(WIN32 AND NOT CYGWIN) 
+	# NSIS bug
+	INSTALL(TARGETS Ryan_Debug
+		RUNTIME DESTINATION ${INSTALL_CMAKE_DIR}/${REL_BIN_DIR}/bin${configappend}
+		COMPONENT Libraries
+		#CONFIGURATIONS ${p}
+		)
+
+	# Regular windows
+
+	INSTALL(FILES
+		"${CMAKE_CURRENT_BINARY_DIR}/config${configappend}.wxs"
+		DESTINATION "${INSTALL_INCLUDE_DIR}/../installer" COMPONENT Scripts)
+	INSTALL(FILES
+		"${CMAKE_CURRENT_BINARY_DIR}/Ryan_Debug.wxs"
+		"${CMAKE_CURRENT_SOURCE_DIR}/upgrade.bat"
+		"${CMAKE_CURRENT_SOURCE_DIR}/collectdirs.bat"
+		"${CMAKE_CURRENT_SOURCE_DIR}/deploy.bat"
+		"${CMAKE_CURRENT_SOURCE_DIR}/license.rtf"
+		DESTINATION "${INSTALL_INCLUDE_DIR}/.." COMPONENT Scripts)
+	endif()
+
+	INSTALL(TARGETS Ryan_Debug
+		EXPORT Ryan_DebugTargets
+		RUNTIME DESTINATION ${INSTALL_CMAKE_DIR}/${REL_BIN_DIR}/bin${configappend}
+		LIBRARY DESTINATION ${INSTALL_CMAKE_DIR}/${REL_LIB_DIR}/lib${configappend}
+		ARCHIVE DESTINATION ${INSTALL_CMAKE_DIR}/${REL_LIB_DIR}/lib${configappend}
+		COMPONENT Libraries
+		#CONFIGURATIONS ${p}
+		)
+
+	INSTALL(EXPORT Ryan_DebugTargets DESTINATION
+		${INSTALL_CMAKE_DIR} COMPONENT Libraries 
+		#CONFIGURATIONS ${p}
+		)
+
+#endforeach()
+
+
+
+INSTALL(DIRECTORY Ryan_Debug/
+	DESTINATION ${INSTALL_INCLUDE_DIR}/Ryan_Debug
+	COMPONENT Headers
+	FILES_MATCHING PATTERN "*.h"
+	)
+INSTALL(FILES
+	#	"${MANIFEST_APP_SNIPPET_NAME}"
+	"${CMAKE_BINARY_DIR}/Ryan_Debug_cmake-settings.h"
+	#	"${CMAKE_CURRENT_BINARY_DIR}/cmake-settings.h"
+	DESTINATION "${INSTALL_INCLUDE_DIR}/Ryan_Debug" COMPONENT Headers)
+
+INSTALL(
+		FILES "${CMAKE_CURRENT_BINARY_DIR}/Ryan_Debug.xml"
+		DESTINATION ${INSTALL_INCLUDE_DIR}/../share
+		COMPONENT Scripts
+	)
+
+IF(INSTALL_MODULES)
+	INSTALL(
+		FILES ${PROJECT_BINARY_DIR}/module-ryan-debug
+		DESTINATION ${ENV_MOD_DIR_PREFIX}
+		COMPONENT Environment
+		RENAME ${MODULES_FILENAME}
+	)
+ENDIF()
+
+INSTALL(FILES "${PROJECT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/Ryan_DebugConfig.cmake"
+	"${PROJECT_BINARY_DIR}/Ryan_DebugConfigVersion.cmake"
+	DESTINATION ${INSTALL_CMAKE_DIR} COMPONENT Libraries)
+
+
+
