Starting to redo the rtmath plugins.
Documented the Ubuntu dependencies in rtmath/plugins/CMakeLists.txt.
Getting the first subset to build. The second set need more CMake
customization.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,10 +136,13 @@ ENDIF()
 
 
 
+option (BUILD_PLUGINS
+	"Master switch to enable / disable building of plugins" ON)
 
 add_subdirectory (ryan-debug)
 add_subdirectory (rtmath/rtmath)
-#add_subdirectory (rtmath/plugins)
+
+add_subdirectory (rtmath/plugins)
 if (BUILD_APPS)
 	add_subdirectory (rtmath/rtmath-apps)
 endif()
