--- a/rtmath/related/rtmath_hdf5_cpp/CMakeLists.txt
+++ b/rtmath/related/rtmath_hdf5_cpp/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required (VERSION 2.8)
 project(rtmath_hdf5_cpp CXX C)
 
-set(CMAKE_MODULE_PATH
-  ${CMAKE_MODULE_PATH}
-  "${CMAKE_CURRENT_SOURCE_DIR}/CMakeRules/"
-)
+#set(CMAKE_MODULE_PATH
+#  ${CMAKE_MODULE_PATH}
+#  "${CMAKE_CURRENT_SOURCE_DIR}/CMakeRules/"
+#)
 
 include(common)
 
@@ -12,7 +12,7 @@ find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
 find_package(HDF5 COMPONENTS C CXX REQUIRED)
-include_directories(${HDF5_INCLUDE_DIRS} ${HDF5_INCLUDE_DIR_CPP})
+include_directories(${HDF5_INCLUDE_DIR_C} ${HDF5_INCLUDE_DIR_CPP})
 add_definitions(${HDF5_DEFINITIONS})
 
 if(DEFINED HDF5_C_LIBRARIES)
