--- a/ryan-debug/plugins/CMakeLists.txt
+++ b/ryan-debug/plugins/CMakeLists.txt
@@ -1,9 +1,7 @@
-option (BUILD_PLUGINS
-	"Master switch to enable / disable building of plugins" ON)
 if (BUILD_PLUGINS)
-	option (BUILD_PLUGIN_TEST
+	option (BUILD_PLUGIN_RYAN_DEBUG_TEST
 		"Build the test plugin" ON)
-	if (BUILD_PLUGIN_TEST)
+	if (BUILD_PLUGIN_RYAN_DEBUG_TEST)
 		add_subdirectory(test)
 	endif()
 endif()
