--- a/rtmath/plugins/hdf5/CMakeLists.txt
+++ b/rtmath/plugins/hdf5/CMakeLists.txt
@@ -5,7 +5,7 @@ find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
 find_package(HDF5 COMPONENTS C CXX REQUIRED)
-include_directories(${HDF5_INCLUDE_DIRS} ${HDF5_INCLUDE_DIR_CPP})
+include_directories(${HDF5_INCLUDE_DIR_C} ${HDF5_INCLUDE_DIR_CPP})
 add_definitions(${HDF5_DEFINITIONS})
 
 if(DEFINED HDF5_C_LIBRARIES)
