--- a/rtmath/rtmath-apps/arm-info/CMakeLists.txt
+++ b/rtmath/rtmath-apps/arm-info/CMakeLists.txt
@@ -8,16 +8,16 @@ add_executable (rtmath-arm-info main.cpp)
 target_link_libraries(rtmath-arm-info ${rtmath_data-libs} rtmath_core rtmath_data)
 addapp(rtmath-arm-info Data)
 
-if (BUILD_PLUGIN_PSQL)
+if (BUILD_PLUGINS AND BUILD_PLUGIN_PSQL)
 	add_dependencies ( rtmath-arm-info rtmath_plugin_psql)
 endif()
-if (BUILD_PLUGIN_NETCDF)
+if (BUILD_PLUGINS AND BUILD_PLUGIN_NETCDF)
 	add_dependencies ( rtmath-arm-info rtmath_plugin_netcdf)
 endif()
-if (BUILD_PLUGIN_ROOT)
+if (BUILD_PLUGINS AND BUILD_PLUGIN_ROOT)
 	add_dependencies ( rtmath-arm-info rtmath_plugin_root)
 endif()
-if (BUILD_PLUGIN_TSV)
+if (BUILD_PLUGINS AND BUILD_PLUGIN_TSV)
 	add_dependencies ( rtmath-arm-info rtmath_plugin_tsv)
 endif()
 
