--- a/rtmath/rtmath-apps/image-basic/CMakeLists.txt
+++ b/rtmath/rtmath-apps/image-basic/CMakeLists.txt
@@ -5,10 +5,10 @@ add_executable (rtmath-image-basic main.cpp)
 addapp( rtmath-image-basic Images)
 target_link_libraries(rtmath-image-basic ${rtmath_images-libs} rtmath_core rtmath_images)
 
-if (BUILD_PLUGIN_IMAGEMAGICK)
+if (BUILD_PLUGINS AND BUILD_PLUGIN_IMAGEMAGICK)
 	add_dependencies ( rtmath-image-basic rtmath_plugin_ImageMagick)
 endif()
 
-if (BUILD_PLUGIN_TSV)
+if (BUILD_PLUGINS AND BUILD_PLUGIN_TSV)
 	add_dependencies ( rtmath-image-basic rtmath_plugin_tsv)
 endif()
