--- a/rtmath/rtmath-apps/oneellip/CMakeLists.txt
+++ b/rtmath/rtmath-apps/oneellip/CMakeLists.txt
@@ -12,16 +12,16 @@ target_link_libraries( rtmath-oneellip
 	)
 addapp(rtmath-oneellip Analysis)
 
-if (BUILD_PLUGIN_BHMIE)
+if (BUILD_PLUGINS AND BUILD_PLUGIN_BHMIE)
 	add_dependencies ( rtmath-oneellip rtmath_plugin_bhmie)
 endif()
-if (BUILD_PLUGIN_MIE)
+if (BUILD_PLUGINS AND BUILD_PLUGIN_MIE)
 	add_dependencies ( rtmath-oneellip rtmath_plugin_mie)
 endif()
-if (BUILD_PLUGIN_NONDDA_MISC)
+if (BUILD_PLUGINS AND BUILD_PLUGIN_NONDDA_MISC)
 	add_dependencies ( rtmath-oneellip rtmath_plugin_nondda_misc)
 endif()
-if (BUILD_PLUGIN_TMATRIX)
+if (BUILD_PLUGINS AND BUILD_PLUGIN_TMATRIX)
 	add_dependencies ( rtmath-oneellip rtmath_plugin_tmatrix)
 endif()
 
