--- a/rtmath/rtmath-apps/shape-depth-info/CMakeLists.txt
+++ b/rtmath/rtmath-apps/shape-depth-info/CMakeLists.txt
@@ -5,13 +5,13 @@ add_executable (rtmath-shape-depth-info shape-depth-info.cpp)
 addapp( rtmath-shape-depth-info Voronoi)
 target_link_libraries(rtmath-shape-depth-info ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
 
-if (BUILD_PLUGIN_VTK)
+if (BUILD_PLUGINS AND BUILD_PLUGIN_VTK)
 	add_dependencies ( rtmath-shape-depth-info rtmath_plugin_vtk)
 endif()
-if (BUILD_PLUGIN_VORO)
+if (BUILD_PLUGINS AND BUILD_PLUGIN_VORO)
 	add_dependencies ( rtmath-shape-depth-info rtmath_plugin_voro)
 endif()
-if (BUILD_PLUGIN_HDF5)
+if (BUILD_PLUGINS AND BUILD_PLUGIN_HDF5)
 	add_dependencies ( rtmath-shape-depth-info rtmath_plugin_hdf5)
 endif()
 
