--- a/rtmath/rtmath-apps/shape-hull/CMakeLists.txt
+++ b/rtmath/rtmath-apps/shape-hull/CMakeLists.txt
@@ -9,13 +9,13 @@ add_executable (rtmath-shape-hull shape-hull.cpp)
 addapp( rtmath-shape-hull Voronoi)
 target_link_libraries(rtmath-shape-hull ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
 
-if (BUILD_PLUGIN_SILO)
+if (BUILD_PLUGINS AND BUILD_PLUGIN_SILO)
 	add_dependencies ( rtmath-shape-hull rtmath_plugin_silo)
 endif()
-if (BUILD_PLUGIN_BOV)
+if (BUILD_PLUGINS AND BUILD_PLUGIN_BOV)
 	add_dependencies ( rtmath-shape-hull rtmath_plugin_bov)
 endif()
-if (BUILD_PLUGIN_HDF5)
+if (BUILD_PLUGINS AND BUILD_PLUGIN_HDF5)
 	add_dependencies ( rtmath-shape-hull rtmath_plugin_hdf5)
 endif()
 
