--- a/rtmath/rtmath-apps/stats/CMakeLists.txt
+++ b/rtmath/rtmath-apps/stats/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable (rtmath-stats stats-main.cpp)
 addapp( rtmath-stats Shapes)
 target_link_libraries(rtmath-stats ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
 
-if (BUILD_PLUGIN_HDF5)
+if (BUILD_PLUGINS AND BUILD_PLUGIN_HDF5)
 	add_dependencies ( rtmath-stats rtmath_plugin_hdf5)
 endif()
 
