--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -1,11 +1,5 @@
 # Build the apps
 
-include_directories(${RYAN_DEBUG_INCLUDE_DIRS})
-
-#option (BUILD_APPS_DEPEND_PCL
-#	"Build apps that depend on PCL"
-#	ON)
-
 macro(addappdir appname appdefault)
 	option(BUILD_APP_${appname}
 		"Build ${appname} app"
@@ -17,38 +11,38 @@ endmacro(addappdir appname appdefault)
 
 #add_subdirectory (absorb-slab)
 #add_subdirectory (atmosplot)
-addappdir(arm-coverage OFF)
-addappdir(arm-info OFF)
-addappdir(arm-sacr OFF)
+#addappdir(arm-coverage OFF)
+#addappdir(arm-info OFF)
+#addappdir(arm-sacr OFF)
 addappdir(combo ON)
 addappdir(comborows ON)
 addappdir(conv-units ON)
-addappdir(ddscat-collect-run-holly OFF)
-addappdir(ddscat-data OFF)
-addappdir(ddscat-ddpar OFF)
-addappdir(ddscat-generate-ellipsoid OFF)
+#addappdir(ddscat-collect-run-holly OFF)
+addappdir(ddscat-data ON)
+addappdir(ddscat-ddpar ON)
+#addappdir(ddscat-generate-ellipsoid OFF)
 addappdir(ddscat-output ON)
 #addappdir(ddscat-output-extract OFF)
 #addappdir(ddscat-output-extract-orientations OFF)
-addappdir(ddscat-output-ingest OFF)
-addappdir(ddscat-output-ingest-ncurses OFF)
-addappdir(ddscat-postprocess OFF)
-addappdir(ddscat-regenerate-run OFF)
-addappdir(ddscat-regenerate-run-db OFF)
-addappdir(ddscat-test OFF)
+#addappdir(ddscat-output-ingest OFF)
+#addappdir(ddscat-output-ingest-ncurses OFF)
+#addappdir(ddscat-postprocess OFF)
+#addappdir(ddscat-regenerate-run OFF)
+#addappdir(ddscat-regenerate-run-db OFF)
+#addappdir(ddscat-test OFF)
 addappdir(density ON)
 addappdir(expand-shorthand ON)
 addappdir(getm ON)
 addappdir(guess-temp ON)
 addappdir(image-basic OFF)
-addappdir(integ-paper-1 OFF)
-addappdir(liu-regenerate-runs OFF)
+#addappdir(integ-paper-1 OFF)
+#addappdir(liu-regenerate-runs OFF)
 addappdir(lowess ON)
 #addappdir(mie-onesphere ON)
 #addappdir(mie-slice ON)
 addappdir(oneellip ON)
-addappdir(oneellip-parallel OFF)
-addappdir(oneellip-table ON)
+#addappdir(oneellip-parallel OFF)
+#addappdir(oneellip-table ON)
 addappdir(orientation-ensembles OFF)
 addappdir(orientation-output-table OFF)
 addappdir(orientation-weights OFF)
@@ -56,29 +50,29 @@ addappdir(orientation-weights-1d ON)
 addappdir(orientation-weights-3d OFF)
 addappdir(orientation-weights-3d-random OFF)
 addappdir(orientation-weights-ddscat ON)
-addappdir(radar-relations OFF)
+#addappdir(radar-relations OFF)
 addappdir(rpline ON)
 addappdir(rtmath-version ON)
 addappdir(shape ON)
 addappdir(shape-depth-info ON)
-addappdir(shape-extract OFF)
-addappdir(shape-hash OFF)
-addappdir(shape-hogan-select OFF)
-addappdir(shape-hogan-measure OFF)
-addappdir(shape-hull OFF)
-addappdir(shape-match-parent OFF)
-addappdir(shape-perturb-interior OFF)
-addappdir(shape-rehash OFF)
+#addappdir(shape-extract OFF)
+#addappdir(shape-hash OFF)
+#addappdir(shape-hogan-select OFF)
+#addappdir(shape-hogan-measure OFF)
+#addappdir(shape-hull OFF)
+#addappdir(shape-match-parent OFF)
+#addappdir(shape-perturb-interior OFF)
+#addappdir(shape-rehash OFF)
 addappdir(stats ON)
 #addappdir(tmatrix-ddscat-extract ON)
 #addappdir(tmatrix-oneellip ON)
 #addappdir(tmatrix-optimize-with-ddscat OFF)
 #addappdir(tmatrix-slice ON)
-addappdir(test-cgal-1 OFF)
+#addappdir(test-cgal-1 OFF)
 addappdir(vf OFF)
-addappdir(visualize-orientation-weights OFF)
-addappdir(visualize-shape-batch OFF)
-addappdir(visualize-shape-batch-fast OFF)
+#addappdir(visualize-orientation-weights OFF)
+#addappdir(visualize-shape-batch OFF)
+#addappdir(visualize-shape-batch-fast OFF)
 addappdir(voronoi ON)
 
 #add_subdirectory (da)
