Updating rtmath code to build again on modern systems.
Need to find and re-import the t-matrix code.

--- a/rtmath/plugins/nondda-misc/CMakeLists.txt
+++ b/rtmath/plugins/nondda-misc/CMakeLists.txt
@@ -2,6 +2,7 @@ include (common)
 include (commonRtmathApps)
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
+include_directories(${CMAKE_SOURCE_DIR}/ryan-debug/)
 
 add_library (rtmath_plugin_nondda_misc SHARED 
 	nondda-rayleigh.cpp
