--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -82,6 +82,10 @@ set (rtmath_core-libs ${rtmath_core-libs} Ryan_Debug )
 #if (USE_RYAN_SERIALIZATION)
 #		set (rtmath_core-libs ${rtmath_core-libs} Ryan_Serialization)
 #endif()
+option(USE_OLD_CPP03_ABI "C++11 led to changes in the GLIB C++ ABI. Turn this on if you are linking against old system libraries" OFF)
+if(USE_OLD_CPP03_ABI)
+	target_compile_definitions(rtmath_core PUBLIC _GLIBCXX_USE_CXX11_ABI=0)
+endif()
 target_link_libraries(rtmath_core ${rtmath_core-libs})
 storebin(rtmath_core)
 
