Modern build fixes

--- a/rtmath/plugins/hdf5/CMakeLists.txt
+++ b/rtmath/plugins/hdf5/CMakeLists.txt
@@ -4,12 +4,13 @@ include (commonRtmathApps)
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
-find_package(HDF5 COMPONENTS C CXX REQUIRED)
-if(DEFINED HDF5_C_LIBRARIES)
-	set (h5libs ${HDF5_C_LIBRARIES} ${HDF5_CXX_LIBRARIES})
-else()
-	set (h5libs hdf5 hdf5_cpp)
-endif()
+#find_package(HDF5 REQUIRED COMPONENTS C	HL)
+#if(DEFINED HDF5_C_LIBRARIES)
+#	set (h5libs ${HDF5_C_LIBRARIES} ${HDF5_CXX_LIBRARIES})
+#else()
+#	set (h5libs hdf5 hdf5_cpp)
+#endif()
+
 #FIND_PACKAGE(SZIP)
 #	message("${SZIP_INCLUDE_DIRS}")
 #	message("${SZIP_LIBRARIES}")
@@ -40,15 +41,15 @@ add_library (rtmath_plugin_hdf5 SHARED
 	hdf5-voronoi-read.cpp
 	)
 addlib(rtmath_plugin_hdf5 SHARED)
-message("${HDF5_INCLUDE_DIR_C} ${HDF5_INCLUDE_DIR_CPP} ${HDF5_INCLUDE_DIRS}")
-target_include_directories(rtmath_plugin_hdf5 ${HDF5_INCLUDE_DIR_C} ${HDF5_INCLUDE_DIR_CPP})
+message("HDF5: ${HDF5_INCLUDE_DIR_C} ${HDF5_INCLUDE_DIR_CPP} ${HDF5_INCLUDE_DIRS}")
+#target_include_directories(rtmath_plugin_hdf5 ${HDF5_INCLUDE_DIR_C} ${HDF5_INCLUDE_DIR_CPP} ${HDF5_INCLUDE_DIRS})
 #add_definitions(${HDF5_DEFINITIONS})
 set_target_properties(rtmath_plugin_hdf5 PROPERTIES COMPILE_DEFINITIONS "${HDF5_DEFINITIONS}")
 
 
 target_link_libraries(rtmath_plugin_hdf5 
 	${rtmath_ddscat-libs} rtmath_core rtmath_ddscat
-	${h5libs}
+	${HDF5_LIBRARIES}
 	rtmath_hdf5_cpp
 	)
 addplugin(rtmath_plugin_hdf5 io rtmath)
