--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -22,7 +22,7 @@ addappdir(ddscat-data ON)
 addappdir(ddscat-ddpar ON)
 #addappdir(ddscat-generate-ellipsoid OFF)
 addappdir(ddscat-output ON)
-#addappdir(ddscat-output-extract OFF)
+addappdir(ddscat-output-extract OFF)
 #addappdir(ddscat-output-extract-orientations OFF)
 #addappdir(ddscat-output-ingest OFF)
 #addappdir(ddscat-output-ingest-ncurses OFF)
